--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "path": "^0.12.7",
     "pg": "^7.11.0",
+    "react-router-dom": "^5.0.0",
     "sequelize": "^5.8.7"
   },
   "devDependencies": {
